# english-speaking-app

./: .gitignore  README.md
android/: .editorconfig  .gitignore  README.md  (+4 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  alembic.sh  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: books.py  deps.py  dialogue.py  health.py  history.py  lessons.py  llm.py  score.py  tts.py  version.py
backend/app/core/: errors.py  logging.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: d5ccd34b98e6_init_users_lessons_history_tts_cache.py  edb6eb8d27a1_drop_history_lesson_id_fk.py
backend/app/models/: db.py  schema.py
backend/app/scoring/: read_along.py
backend/app/services/: app_version_resolver.py  corpus_loader.py  dialogue_scenes.py  interfaces.py  ise_xml.py  llm_provider.py  spark_tts.py  stub_providers.py  tts_cache.py  xunfei_asr.py  xunfei_tts.py
backend/data/nce1/: book.json  lesson_001.json
backend/data/nce2/: book.json  lesson_001.json
backend/tests/: conftest.py  test_app_version_resolver.py  test_books_endpoint.py  test_db.py  test_dialogue_scenes.py  test_dialogue_stub.py  test_errors.py  test_health.py  test_history.py  test_ise_xml.py  test_l1_flow.py  test_lesson_progress.py  test_lessons.py  test_llm_endpoints.py  test_llm_provider.py  test_models.py  test_read_along_scoring.py  test_schema.py  test_score.py  test_spark_tts.py  test_stats_endpoint.py  test_stub_providers.py  test_tts.py  test_tts_cache.py  test_xunfei_asr.py
(+86 files in other folders)
